--- a/css/styles.css
+++ b/css/styles.css
@@ -26,13 +26,14 @@ p{
 .container-fluid{
     padding: 3% 15% 8%;
 }
+
+
 /* NAVIGATION-BAR */
 
 .navbar{
     padding: 0 0 4.5rem 0;
 }
 .navbar-brand{
-
     font-family: 'Ubuntu';
     font-size: 2.5rem;
     font-weight: bold;
@@ -44,12 +45,17 @@ p{
     font-family:'Poppins', sans-serif;
     font-weight: bold;
 }
+
+
+
 /*DOWNLOD-BUTTON*/
 
 .download-button{
     border-radius: 5.5%;
     margin: 5% 3% 5% 0;
 }
+
+
 /* TITLE-IMAGE */
 .iphone-image{
     position: relative;
@@ -61,7 +67,11 @@ p{
     width:60%; 
     transform: rotate(25deg);
 }
+
+
+
 /*FEATURES-SECTION*/
+
 #features{
     position: relative;
     background-color: #fff;
@@ -81,6 +91,9 @@ p{
 .icon:hover{
     color: #ff4c68;
 }
+
+
+
 /*TESTIMONIALS*/
 
 #testimonials{
@@ -110,7 +123,10 @@ p{
     bottom: 30px;
 }
 
+
+
 /*PRICING SECTION*/
+
 #pricing{
     padding: 100px;
     text-align: center;
@@ -119,17 +135,9 @@ p{
     padding:3% 2%;
 }
 
-@media (max-width:1028px) {
-    #title{
-        text-align: center;
-    }
-    .title-image{
-        position: static;
-        transform: rotate(10deg);
-    }
 
-    
-}
+
+/*CTA-SECTION*/
 
 #cta{
     text-align: center;
@@ -147,6 +155,8 @@ p{
     margin-left: 2%;
 }
 
+
+
 /*FOOTER*/
 
 #footer{
@@ -159,4 +169,18 @@ p{
 }
 .footer-message{
     margin-top: 1%;
+}
+
+
+
+@media (max-width:1028px) {
+    #title{
+        text-align: center;
+    }
+    .title-image{
+        position: static;
+        transform: rotate(10deg);
+    }
+
+    
 }
